feat(cli): add clock endpoint to co-ordinate syncronisation
